--- a/app/assets/stylesheets/_projects.scss
+++ b/app/assets/stylesheets/_projects.scss
@@ -1,180 +1,3 @@
-  .chat-side {
-    height: 100vh;
-    width: 300px;
-    float: left;
-    .chat-side__user{
-      height: 15%;
-      width: 100%;
-      background-color: #090c10;
-      position: relative;
-      .chat-side__user-content{
-        height: 50px;
-        width: 100%;
-        line-height: 50px;
-        margin: auto 0;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        .chat-side__user-name{
-          color: #fff;
-          font-size: 20px;
-          font-weight: bold;
-          margin: 0 20px;
-          position: relative;
-          display: inline-block;
-        }
-        .chat-side__user--new-group{
-          color: #fff;
-          margin-left: 90px;
-          position: relative;
-          display: inline-block;
-          %i.fa.fa-pencil-square-o{
-            display: inline-block;
-            font: normal normal normal 14px
-          }
-        }
-        .chat-side__user--edit-user{
-          color: #fff;
-          position: relative;
-          display: inline-block;
-          %i.fa.fa-cog{
-          }
-        }
-      }
-    }
-    .chat-side__groups{
-      height: 85%;
-      width: 100%;
-      background-color: #253141;
-      .chat-side__groups-list{
-        height: 100%;
-        color: #fff;
-          .chat-side__group{
-            padding: 20px;
-            .chat-side__group-name{
-              font-size: 15px;
-            }
-            .chat-side__group-message{
-              font-size: 11px;
-            }
-          }
-      }
-    }
-  }
-  .chat-main{
-    height: 100vh;
-    width: calc( 100vw - 300px );
-    float: left;
-    .chat-main__header{
-      height: 15%;
-      border: 1px solid #eee;
-      .chat-main__header--group.clearfix{
-        margin: 0 40px;
-        clear: both;
-        content: '';
-        display: block;
-        .chat-main__header--group-name{
-          color: #333;
-          font-size: 20px;
-          margin: 35px 0 15px;
-          float: left;
-        }
-        .chat-main__header--group-edit-btn{
-          color: #38AEF0;
-          font-size: 15px;
-          padding: 12.5px 20px;
-          margin: 28px 20px 0;
-          border: 1px solid #38AEF0;
-          float: right;
-        }
-      .chat-main__header-members{
-        color: #999;
-        font-size: 12px;
-        margin: 0 40px;
-        display: block;
-          .i{
-            font: italic;
-            font-size: 12px;
-          }
-        }
-      }
-    }
-    .chat-main__body{
-      height: calc( 100vh - 15% - 90px );
-      overflow-y: scroll;
-      .chat-main__body--messages-list{
-      padding-top: 26px;
-      padding-left: 40px;
-        .chat-main__message.clearfix{
-          padding: 20px 0;
-          .chat-main__message-name{
-            color: #434A54;
-            font-size: 16px;
-            font-weight: bold;
-            float: left;
-          }
-          .chat-main__message-time{
-            color: #999;
-            font-size: 12px;
-            padding: 0 10px 10px;
-            float: left;
-          }
-          .chat-main__message-body{
-            color: #434A54;
-            clear: both;
-            %img.chat-main__message-body-image{
-            }
-          }
-        }
-      }
-    }
-    .chat-main__footer{
-      height: 90px;
-      width: 100%;
-      background-color: #B8C3C7;
-      .new_message.chat-main__footer-form{
-        margin: 0 40px;
-        position: relative;
-        display: block;
-        .chat-main__footer-body{
-          position: relative;
-          .message_body.message{
-            height: 30px;
-            width: calc( 100% - 130px );
-            padding: 15px 10px;
-            margin: 20px 0;
-            border: none;
-            float: right;
-          }
-          .label.chat-file{
-            height: 50px;
-            width: 40px;
-            margin: 32px 130px 20px 0;
-            position: absolute;
-            top: 0;
-            right: 0;
-            float: right;
-          }
-            .message_image.image{
-            }
-            %i.fa.fa-image{
-            }
-          }
-        .submit{
-          color: #fff;
-          width: 100px;
-          height: 50px;
-          text-align: center;
-          background-color: #38AEF0;
-          margin: 20px 0;
-          position: absolute;
-          top: 0;
-          right: 0;
-          border: none;
-        }
-      }
-    }
-  }
-// Place all the styles related to the projects controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.test {
+  color: red;
+}
